# PS2RecompPlayground

./: .gitignore  PR_SURVEY_GS_IOP.md  TODO.md  fix-blendv.ps1  fix-return-pattern.ps1
ps2xRuntime/: CMakeLists.txt
ps2xRuntime/include/: ps2_audio.h  ps2_call_list.h  ps2_fake_gs.h  ps2_gif_arbiter.h  ps2_gs.h  ps2_gs_gpu.h  ps2_gs_psmt4.h  ps2_init_log.h  ps2_iop.h  ps2_log.h  ps2_memory.h  ps2_runtime.h  ps2_runtime_macros.h  ps2_syscalls.h  ps2_vu1.h
ps2xRuntime/scripts/: add_init_logs.ps1
ps2xRuntime/src/lib/: ps2_audio.cpp  ps2_audio_vag.cpp  ps2_fake_gs.cpp  ps2_gif_arbiter.cpp  ps2_gs.cpp  ps2_gs_gpu.cpp  ps2_gs_rasterizer.cpp  ps2_iop.cpp  ps2_iop_audio.cpp  ps2_memory.cpp  ps2_pad.cpp  ps2_runtime.cpp  ps2_stubs.cpp  ps2_syscalls.cpp  ps2_vif1_interpreter.cpp  ps2_vu1.cpp
ps2xRuntime/src/lib/stubs/: ps2_stubs_gs.inl  ps2_stubs_misc.inl
ps2xRuntime/src/lib/stubs/helpers/: ps2_stubs_helpers.inl
ps2xRuntime/src/lib/syscalls/: ps2_syscalls_fileio.inl  ps2_syscalls_interrupt.inl  ps2_syscalls_rpc.inl  ps2_syscalls_system.inl
ps2xRuntime/src/runner/: ADXAMP_Create_0x166260.cpp  ADXAMP_Destroy_0x166380.cpp  ADXAMP_ExecHndl_0x1666c0.cpp  ADXAMP_ExecServer_0x1666e0.cpp  ADXAMP_Finish_0x166230.cpp  ADXAMP_GetExtractNumSmpl_0x166740.cpp  ADXAMP_GetFrmLen_0x166760.cpp  ADXAMP_GetFrmPrd_0x166770.cpp  ADXAMP_GetSfreq_0x166750.cpp  ADXAMP_GetStat_0x1663d0.cpp  ADXAMP_Init_0x1661f0.cpp  ADXAMP_SetFrmLen_0x166758.cpp  ADXAMP_SetFrmPrd_0x166768.cpp  ADXAMP_SetSfreq_0x166748.cpp  ADXAMP_Start_0x1663d8.cpp  ADXAMP_Stop_0x166418.cpp  ADXB_CheckAiff_0x166b58.cpp  ADXB_CheckAu_0x167418.cpp  ADXB_CheckSpsd_0x168ab8.cpp  ADXB_CheckWav_0x1692e8.cpp  ADXB_CopyExtraBufMono_0x168400.cpp  ADXB_CopyExtraBufSte_0x168390.cpp  ADXB_Create_0x167be8.cpp  ADXB_DecodeHeaderAdx_0x167d30.cpp  ADXB_DecodeHeaderAiff_0x166cc0.cpp  ADXB_DecodeHeaderAu_0x167580.cpp  ADXB_DecodeHeaderSpsd_0x168840.cpp  ADXB_DecodeHeaderWav_0x168d50.cpp  ADXB_DecodeHeader_0x167ec8.cpp  ADXB_Destroy_0x167cf0.cpp  ADXB_EndDecode_0x168410.cpp  ADXB_EntryAddWrFunc_0x167fd0.cpp  ADXB_EntryData_0x1680c0.cpp  ADXB_EntryGetWrFunc_0x167fc0.cpp  ADXB_EvokeDecode_0x168288.cpp  ADXB_EvokeExpandMono_0x1681e8.cpp  ADXB_EvokeExpandSte_0x168230.cpp  ADXB_ExecHndl_0x168660.cpp  ADXB_ExecOneAdx_0x168590.cpp  ADXB_ExecOneAhx_0x1667c0.cpp  (+14639 more)
(+5 files in other folders)
